--- a/src/styles/menu.module.css
+++ b/src/styles/menu.module.css
@@ -1,15 +1,15 @@
 .menu {
   margin: 0 auto;
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 0px;
+  left: 0px;
   width: 100%;
   height: 50px;
   padding-left: 0;
   list-style-type: none;
   display: flex;
   flex-direction: row;
-  /* justify-content: center; */
+  justify-content: center;
 }
 
 .item {
@@ -17,12 +17,17 @@
   color: #3a405a;
 }
 
+.item:hover {
+  text-decoration: none;
+  color: #ede8db;
+}
+
 .li {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #e1bbc9;
+  background-color: #d0cfec;
   width: 200px;
   height: 50px;
   border-radius: 10px;
@@ -30,6 +35,6 @@
 }
 
 .li:hover {
-  color: #171219; /*#3a405a;*/
-  background-color: #f0803c; /*#d0cfec;*/
+  color: #4a4a48; /*#171219; /*#3a405a;*/
+  background-color: #a57c65; /*#f0803c; /*#d0cfec;*/
 }
