--- a/src/styles/menu.module.css
+++ b/src/styles/menu.module.css
@@ -24,7 +24,7 @@
 
 .li {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   background-color: #d0cfec;
@@ -32,6 +32,7 @@
   height: 50px;
   border-radius: 10px;
   font-weight: 700;
+  gap: 3px;
 }
 
 .li:hover {
